force-app/main/default/objects/Vehicle_Inspection_Checklist__c/Vehicle_Inspection_Checklist__c.object-meta.xml
<CustomObject>
    <label>Vehicle Inspection Checklist</label>
    <nameField>
        <displayFormat>VIC-{MM}-{YYYY}-{000000}</displayFormat>
        <label>Vehicle Inspection Checklist</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Inspection Checklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>