force-app/main/default/objects/Vehicle_Inspection_Checklist__c/fields/Actual_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Inspection_Date__c</fullName>
    <label>Actual Inspection Date</label>
    <type>DateTime</type>
</CustomField>