force-app/main/default/objects/Vehicle_Inspection_Checklist__c/fields/Brake_Lamps__c.field-meta.xml
<CustomField>
    <fullName>Brake_Lamps__c</fullName>
    <label>Brake Lamps</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Maintenance_Results</valueSetName>
    </valueSet>
</CustomField>