force-app/main/default/objects/Vehicle_Inspection_Checklist__c/fields/Driver_Window__c.field-meta.xml
<CustomField>
    <fullName>Driver_Window__c</fullName>
    <label>Driver Window</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Maintenance_Results</valueSetName>
    </valueSet>
</CustomField>