force-app/main/default/objects/Vehicle_Inspection_Checklist__c/fields/Engine__c.field-meta.xml
<CustomField>
    <fullName>Engine__c</fullName>
    <label>Engine</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Maintenance_Results</valueSetName>
    </valueSet>
</CustomField>