force-app/main/default/objects/Vehicle_Inspection_Checklist__c/fields/First_Aid_Kit__c.field-meta.xml
<CustomField>
    <fullName>First_Aid_Kit__c</fullName>
    <label>First Aid Kit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Maintenance_Results</valueSetName>
    </valueSet>
</CustomField>