force-app/main/default/objects/Vehicle_Inspection_Checklist__c/fields/Front_Tires_Rims__c.field-meta.xml
<CustomField>
    <fullName>Front_Tires_Rims__c</fullName>
    <label>Front Tires | Rims</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Maintenance_Results</valueSetName>
    </valueSet>
</CustomField>