force-app/main/default/objects/Vehicle_Inspection_Checklist__c/fields/Headlamps__c.field-meta.xml
<CustomField>
    <fullName>Headlamps__c</fullName>
    <label>Headlights</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Maintenance_Results</valueSetName>
    </valueSet>
</CustomField>