force-app/main/default/objects/Vehicle_Inspection_Checklist__c/fields/Heater_AC__c.field-meta.xml
<CustomField>
    <fullName>Heater_AC__c</fullName>
    <label>Heater / AC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Maintenance_Results</valueSetName>
    </valueSet>
</CustomField>