force-app/main/default/objects/Vehicle_Inspection_Checklist__c/fields/Horn__c.field-meta.xml
<CustomField>
    <fullName>Horn__c</fullName>
    <label>Horn</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Maintenance_Results</valueSetName>
    </valueSet>
</CustomField>