force-app/main/default/objects/Vehicle_Inspection_Checklist__c/fields/Inspection_Detailed_Notes__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Detailed_Notes__c</fullName>
    <label>Inspection Detailed Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>