force-app/main/default/objects/Vehicle_Inspection_Checklist__c/fields/Odometer__c.field-meta.xml
<CustomField>
    <fullName>Odometer__c</fullName>
    <label>Odometer Mileage</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>