force-app/main/default/objects/Vehicle_Inspection_Checklist__c/fields/Passenger_Window__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Window__c</fullName>
    <label>Passenger Window</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Maintenance_Results</valueSetName>
    </valueSet>
</CustomField>