force-app/main/default/objects/Vehicle_Inspection_Checklist__c/fields/Power_Steering__c.field-meta.xml
<CustomField>
    <fullName>Power_Steering__c</fullName>
    <label>Power Steering</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Maintenance_Results</valueSetName>
    </valueSet>
</CustomField>