force-app/main/default/objects/Vehicle_Inspection_Checklist__c/fields/Rear_Tires_Rims__c.field-meta.xml
<CustomField>
    <fullName>Rear_Tires_Rims__c</fullName>
    <label>Rear Tires | Rims</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Maintenance_Results</valueSetName>
    </valueSet>
</CustomField>