force-app/main/default/objects/Vehicle_Inspection_Checklist__c/fields/Sanitation_Kits__c.field-meta.xml
<CustomField>
    <fullName>Sanitation_Kits__c</fullName>
    <label>Sanitation Kits</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Maintenance_Results</valueSetName>
    </valueSet>
</CustomField>