force-app/main/default/objects/Vehicle_Inspection_Checklist__c/fields/Seat_Belts__c.field-meta.xml
<CustomField>
    <fullName>Seat_Belts__c</fullName>
    <label>Seat Belts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Maintenance_Results</valueSetName>
    </valueSet>
</CustomField>