force-app/main/default/objects/Vehicle_Inspection_Checklist__c/fields/Side_Load_Door__c.field-meta.xml
<CustomField>
    <fullName>Side_Load_Door__c</fullName>
    <label>Side Load Door</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Maintenance_Results</valueSetName>
    </valueSet>
</CustomField>