force-app/main/default/objects/Vehicle_Inspection_Checklist__c/fields/Signal_Lights_Rear__c.field-meta.xml
<CustomField>
    <fullName>Signal_Lights_Rear__c</fullName>
    <label>Signal Lights Rear</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Maintenance_Results</valueSetName>
    </valueSet>
</CustomField>