force-app/main/default/objects/Vehicle_Inspection_Checklist__c/fields/Signals_Front__c.field-meta.xml
<CustomField>
    <fullName>Signals_Front__c</fullName>
    <label>Signal Lights Front</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Maintenance_Results</valueSetName>
    </valueSet>
</CustomField>