force-app/main/default/objects/Vehicle_Inspection_Checklist__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <label>Vehicle</label>
    <referenceTo>Vehicles__c</referenceTo>
    <relationshipLabel>Vehicle Inspection Checklists</relationshipLabel>
    <relationshipName>Vehicle_Inspection_Checklists</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>