force-app/main/default/objects/Vehicle_Inspection_Checklist__c/fields/Windshield_Washer__c.field-meta.xml
<CustomField>
    <fullName>Windshield_Washer__c</fullName>
    <label>Windshield Washer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Maintenance_Results</valueSetName>
    </valueSet>
</CustomField>