force-app/main/default/objects/Vehicle_Inspection_Checklist__c/fields/Windshield_Washer_Fluid__c.field-meta.xml
<CustomField>
    <fullName>Windshield_Washer_Fluid__c</fullName>
    <label>Windshield Washer Fluid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Maintenance_Results</valueSetName>
    </valueSet>
</CustomField>